# TRI-X

./: CITATION.cff  CONTRIBUTING.md  DATASHEET_SynDX.md  Dockerfile  FIGURE_MANIFEST.csv  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.md/: MODEL_CARD.md  QUICKSTART.md  README.md
docs/: TRIX_DEVELOPMENT_PLAN.md
examples/: __init__.py  framework_diagrams.py  trix_visualizations.py
examples/.md/: README.md
notebooks/: 01_trix_introduction.ipynb
scripts/: demo.py  generate_manuscript_figures.py
src/trix/: __init__.py  cli.py  constants.py  governance.py  pipeline.py  titrate.py  triage.py  xai.py
tests/: test_triage.py
trix/: __init__.py  cli.py  governance.py  pipeline.py  titrate.py  triage.py  xai.py
