[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trix"
version = "1.0.0"
description = "TRI-X: Triage-TiTrATE-XAI Framework for Emergency Decision Support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["trix*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
